--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1693.0",
     "node-pty": "^1.1.0",
     "ws": "^8.19.0"
   }
