--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1693.0",
+    "node-fetch": "^2.7.0",
     "node-pty": "^1.1.0",
     "ws": "^8.19.0"
   }
